# addressdata

./: .gitignore  Address.h  Addressdaten.cpp  AddressdatenCMDL.cpp  AddressdatenCMDL.h  AddressdatenParameter.cpp  AddressdatenParameter.h  CMakeLists.txt  CODE_OF_CONDUCT.md  Commandline.cpp  Commandline.h  KoelnerPhonetik.cpp  KoelnerPhonetik.h  README.md  address.cpp  address.h  addressdaten.cpp  banner  banner_flower_power  bannersimple  runinfo
libs/: AddressdatenParameter.cpp  AddressdatenParameter.h  CMakeLists.txt
src/: AddressdatenCMDL.cpp  AddressdatenCMDL.h  CMakeLists.txt  Doxyfile.in
src/libs/Address/: Address.cpp  Address.h  CMakeLists.txt
src/libs/AddressParameter/: CMakeLists.txt
src/libs/Banner/: Banner.cpp.in  Banner.h.in  CMakeLists.txt  banner  banner_flower_power  bannersimple
src/libs/Commandline/: CMakeLists.txt  Commandline.h
src/libs/RunInfo/: CMakeLists.txt  RunInfo.cpp.in  RunInfo.h.in  runinfo
